@@ -440,6 +440,7 @@ if (isset($GALLERY_EMBEDDED_INSIDE)) {
 		break;
 
 		case 'cpgnuke':
+			print_r($GLOBALS);
 			/* we're in CPG-Nuke */
 			include_once(dirname(__FILE__) . "/classes/Database.php");
 			include_once(dirname(__FILE__) . "/classes/database/mysql/Database.php");
@@ -478,7 +479,7 @@ if (isset($GALLERY_EMBEDDED_INSIDE)) {
 			if (is_admin()) {
 				include_once(dirname(__FILE__) . "/classes/cpgnuke/AdminUser.php");
 				
-				$gallery->user = new CPGNuke_AdminUser($userinfo);
+				$gallery->user = new CPGNuke_AdminUser();
 				$gallery->session->username = $gallery->user->getUsername();
 			}	    		
 
