@@ -1,3 +1,14 @@
+2004-10-15  Jens A. Tkotz <jens@peino.de>  1.4.5-cvs-b226
+
+	* Fix: uncritical cpgNuke Fixes.
+
+	* Fix: uncritical fix for getEnvLang, it was possible that nothing was returned.
+
+2004-10-14  Jens A. Tkotz <jens@peino.de>  1.4.5-cvs-b225
+
+        * New: CSS :focus for input, textarea and selectboxes.
+	       Used in config, "none" and "jenskin".
+
 2004-10-14  Jens A. Tkotz <jens@peino.de>  1.4.5-cvs-b224
 
 	* New: CPGNuke integration.
